--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,11 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+}
+
+section {
+  width: 100%;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+  margin-block: 2rem;
+  padding: 1rem;
 }
