--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
-#root {
+.app {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin-inline: auto;
 }
 
 section {
-  width: 100%;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
   margin-block: 2rem;
   padding: 1rem;
